# rc_matrix_mod

./: CMakeLists.txt  MidiBridge.cpp  MidiBridge.h  MidiTransport.cpp  MidiTransport.h  jzz.js  jzz_webchannel.js  main.cpp  midi_shim.js  package-lock.json  package.json  resource.qrc  run.py
AudioControlMod/: metadata.json
AudioControlMod/contents/: MidiChannelTransport.qml  WebView.qml  helpers.js  main.qml
Mat/: metadata.json
Mat/contents/: Dial.qml  DialControl.qml  FilterTypeController.qml  MultiController.qml  Slider.qml  SliderControl.qml  main.qml
